added Footer content and improved styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,14 @@
  .needsCentering {
    text-align: center;
  }
+
+ #welcomeHeader {
+   color: #fff;
+   text-align: center;
+ }
+
+ #welcomeMessage {
+   background-color: rgba(4, 14, 201, 0.5);
+   color: #fff;
+   text-align: center;
+ }
